# zen-rule

./: .gitignore  README.md  fastapidemo.py  func_schema.py  main.py  main_v1.py  pgdemo.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  test_fastapi_db_transaction.py  test_parser.py  test_zen_engine_contextvars.py  udfv1.py  utils.py
archive/: custom_v1.json  custom_v3.json  readme.md
docs/: jdm-editor.md  jdm.md  udf_spec.md  uv.md  zen-engine-node-types.md  zen-expression.md
docs/graph/: readme.md
docs/udf_node_spec/: custom_v2.json  custom_v2_parse.json  readme.md
graph/: custom.json  custom2.json  custom_v2_all_nodes.json  custom_v3.json  custom_v3_fullnode.json  expression_loop.json  http_call.json  no_end_node.json  readme.md  table-loop.json
skills/: loop.json  testlog.py  with-contextvars.py
src/: function_call_parse.py  readme.md  udf_manager.py  zen_rule.py
src/custom/: custom_v1.json  custom_v2.json  custom_v2_2.json  custom_v3.json  custom_v3_v1.json  func_engine.py  func_engine_v2.py  func_engine_v3.py  func_parser.py  udf_manager.py
src/zen_rule/: __init__.py  contrib.py  engine.py  register.py  udf.py
src/zen_rule/custom/: __init__.py  func_engine_v2.py  func_engine_v3.py  func_parser.py  pyparsing_parser.py  udf_manager.py  udf_parser.py
tests/: conftest.py  pytest.ini  readme.md  rule_manager.py  test_custom_specv1.py  test_func_engine_v2.py  test_parser.py  test_pyparsing.py  test_pytest_demo.py  test_zen_custom_brde.py  test_zen_expr_parser.py  test_zen_expression_data.py  test_zen_udf_args_parser.py  test_zenrules.py
tests/bench/: test_zen_engine.py
tests/data/: date.csv  test_zen_expression_data.py  test_zen_udf_args_parser.py
tests/parser/: readme.md  test_zen_exprs.py
tests/parser/pyparsing/: test_infix_exprs.py  test_infix_func_call.py  test_parse_json.py  test_string_slice.py  test_ternary_exprs.py
tests/parser/re/: test_regex_comma.py  test_regex_double_semicolon.py  test_regex_func_parser.py
tests/zen/: expression_decision_switch_node.json  expression_multi2.json  readme.md  test_async.py  test_sync.py  test_zen.py  test_zen_expression.py  test_zen_literal_exprs.py  test_zen_node_types.py
tests/zen/custom_node/: test_zen_cn_contextvars.py  test_zen_cn_input.py
tests/zen/test-data/: custom_noconfig.json  custom_request_node.json  http-function.json  multi_custom.json  namelist.json
