[project]
name = "zen-rule"
version = "0.5.0"
description = "zen-engine enrichment for custom node spec and cache ZenDecision objects for performance"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "zen-engine"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["zen-rule"]

[project.urls]
Homepage = "https://github.com/republicroad/zen-rule"
Documentation = "https://github.com/republicroad/zen-rule/blob/main/README.md"