[project]
name = "zen-rule"
version = "0.16.3"
description = "zen-engine enrichment for custom node spec and cache ZenDecision objects for performance"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyparsing>=3.1.4",
    "zen-engine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["zen-rule"]

[tool.uv.sources]
zen-rule = { workspace = true }

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.1",
    "zen-rule",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true


[project.urls]
Homepage = "https://github.com/republicroad/zen-rule"
Documentation = "https://github.com/republicroad/zen-rule/blob/main/README.md"
