[project]
name = "zen-rule"
version = "0.26.0"
description = "zen-engine enrichment for custom node spec and cache ZenDecision objects for performance"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "zen-engine>=0.53.0",
    "docstring-parser",
    "typing-extensions",
    "typing-inspection",
    "pydantic-core",
    "annotated-types",
    "pydantic>=2.12.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["zen-rule"]

[tool.uv.sources]
zen-rule = { workspace = true }

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.1",
    "zen-rule",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true


[project.urls]
Homepage = "https://github.com/republicroad/zen-rule"
Documentation = "https://github.com/republicroad/zen-rule/blob/main/README.md"


[project.scripts]
zenrule = "zen_rule:hello"


[tool.bumpversion]
current_version = "0.26.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} -> {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'